assets/css/styles.css
/* ... */
/* Menu and Navigation Section */
.menu div {
  float: right;
  height: 40px;
  vertical-align: bottom;
}

.menu::after, .menu::before {
  box-sizing: unset !important;
}

nav {
  min-width: 70px;
  width: auto;
  right: 0;
  vertical-align: bottom;
  text-align: center;
  align-items: baseline;
  height: 16px;
  position: absolute;
  bottom: 0px;
  display: inline-block;
  font-size: 15pt;
  padding: 21px;
  white-space: nowrap;
  text-overflow: ellipsis;
}

nav a {
  padding: 15px 15px;
  text-decoration: none;
  color: #585858;
}

nav::after, nav::before {
  box-sizing: unset !important;
}

nav a:hover {
  padding: 15px 15px;
  text-decoration: none;
  color: #00505c;
  background-color: rgba(255, 255, 255, 0.35);
}

nav a:active, .active {
  padding: 15px 15px;
  text-decoration: none;
  color: #00505c;
}

nav a:active:hover, .active:hover {
  padding: 15px 15px;
  text-decoration: none;
  color: #003f49;
  background-color: rgba(255, 255, 255, 0.35);
}

/* Hero Image Section */
.hero {
  height: 200px;
  display: block;
  position: relative;
  z-index: 8000;
}

#hero-text-position {
  vertical-align: bottom;
  padding-bottom: 20px;
  padding-top: 180px;
  max-width: 75%;
}

.hero-title div, .hero-title h1 {
  height: 47px;
  background-color: rgba(255, 255, 255, 0.35);
  animation: flyIn 3s;
  animation-delay: 0s;
}

.hero-title h1 {
  color: #14436c;
  font-size: 1.1;
  font-family: Gill Sans;
  font-style: italic;
  padding: 15px 15px 15px 50px;
  margin: 20px;
}

.hero_image1 {
  background: url(./images/hero-image1.jpg);
  height: 350px;
  width: auto;
  background-position: bottom center;
  background-size: cover;
  /* animate the hero background image */
  animation: heroIncrease 10s;
  animation-delay: 0;
  animation-fill-mode: forwards;
}

.hero_image2 {
  background: url(../images/hero-image2.jpg);
  height: 350px;
  width: auto;
  background-position: bottom center;
  background-size: cover;
  /* animate the hero background image */
  animation: heroIncrease 10s;
  animation-delay: 0;
  animation-fill-mode: forwards;
}

.hero_image3 {
  background: url(../images/hero-image3.jpg);
  height: 350px;
  width: auto;
  background-position: bottom center;
  background-size: cover;
  /* animate the hero background image */
  animation: heroIncrease 10s;
  animation-delay: 0;
  animation-fill-mode: forwards;
}

.hero_image4 {
  background: url(../images/hero-image4.jpg);
  height: 350px;
  width: auto;
  background-position: bottom center;
  background-size: cover;
  /* animate the hero background image */
  animation: heroIncrease 10s;
  animation-delay: 0;
  animation-fill-mode: forwards;
}

.hero_image5 {
  background: url(../images/hero-image5.jpg);
  height: 350px;
  width: auto;
  background-position: bottom center;
  background-size: cover;
  /* animate the hero background image */
  animation: heroIncrease 10s;
  animation-delay: 0;
  animation-fill-mode: forwards;
}

/* _____________________ Main Content Section ___________________  */
/* Home Page */
.intro-box {
  height: 180px;
  width: 180px;
  display: inline-block;
  padding: 20px;
  margin: 20px;
  color: #ffffff;
  font-weight: 900;
  font-size: 14pt;
  display: inline-block;
}

.box1 {
  background-color: #b7af8c;
}

.box2 {
  background-color: rgba(20, 67, 108, 0.5);
}

.box3 {
  background-color: #767676;
}

.box4 {
  background-color: rgba(0, 80, 92, 0.5);
}

.content-box {
  min-height: 150px;
  max-height: 250px;
  min-width: 150px;
  max-width: 250px;
  margin: 0;
  padding: 25px;
}

section {
  min-height: 150px;
  height: auto;
  padding: 0;
  margin: 0;
  width: 100%;
}

#index_one {
  background-color: #ffffff;
  vertical-align: middle;
  width: 100%;
}

#index_two {
  background-color: rgba(34, 85, 129, 0.49);
  vertical-align: middle;
  width: 100%;
}

#index_three {
  background-color: rgba(129, 122, 34, 0.24);
  width: 100%;
}

#index_four {
  background-color: rgba(0, 80, 92, 0.5);
  width: 100%;
}

/* _______ This is the footer section ________ */
footer {
  clear: both;
  height: 60px;
  padding: 5px 0 0 0;
  border-top: 1px solid black;
  box-shadow: rgb(0, 0, 0) 2px 0px 3px;
  background-color: #b7af8c;
  color: #363545;
  font-weight: 700;
  font-size: 0.75em;
  width: 100%;
  left: 0;
  position: absolute;
  bottom: 0;
  display: block;
}

/* Contact us section */
/* ____________ This is the media query section ____________ */
/* Extra large devices */
@media (min-width: 1200px) and (max-width: 1920px) {
  .container {
    width: 100%;
    max-width: 1920px;
  }
  .hero_image1 {
    background: url(../images/hero-image1.jpg);
    height: 350px;
    width: auto;
    background-position: bottom center;
    background-size: cover;
  }
  .hero_image2 {
    background: url(../images/hero-image2.jpg);
    height: 350px;
    width: auto;
    background-position: bottom center;
    background-size: cover;
  }
  .hero_image3 {
    background: url(../images/hero-image3.jpg);
    height: 350px;
    width: auto;
    background-position: bottom center;
    background-size: cover;
  }
  .hero_image4 {
    background: url(../images/hero-image4.jpg);
    height: 350px;
    width: auto;
    background-position: bottom center;
    background-size: cover;
  }
  .hero_image5 {
    background: url(../images/hero-image5.jpg);
    height: 350px;
    width: auto;
    background-position: bottom center;
    background-size: cover;
  }
}
/* ... */

